src/objects/Account_Contract__c.object
<CustomObject>
    <fields>
        <fullName>Subcategory_formula__c</fullName>
        <formula>CASE(TEXT( subproduct_type__c ), &apos;01&apos;, &apos;Directa&apos;, &apos;02&apos;, &apos;Indirecta&apos;, &apos;03&apos;, &apos;Recursos&apos;, &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Subcategory formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unpaid_Days__c</fullName>
        <formula>IF((TODAY() - gf_next_payment_expir_date__c) &lt; 0, 0, TODAY() - gf_next_payment_expir_date__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unpaid Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>account_id__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Contracts</relationshipLabel>
        <relationshipName>Account_Contracts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>contract_end_date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Cancellation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>contract_id__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Contract Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gf_lc_contract_lc_amount__c</fullName>
        <label>Local Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>gf_next_payment_expir_date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>gf_tl_bal_contract_oc_amount__c</fullName>
        <label>Origin Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>product_type__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>01</fullName>
                </value>
                <value>
                    <fullName>02</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>solution_category_name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Product</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>solution_expiry_type__c</fullName>
        <label>Term Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>01</fullName>
                </value>
                <value>
                    <fullName>02</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>subproduct_type__c</fullName>
        <label>Subcategory</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>01</fullName>
                </value>
                <value>
                    <fullName>02</fullName>
                </value>
                <value>
                    <fullName>03</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>unique_id__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Unique Identifier</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Account Contract</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Account Contract Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Contracts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>